transpose main logic, create test

--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation "junit:junit:4.12"
     implementation 'no.tornado:tornadofx:1.7.20'
 }
 
